--- a/API/package.json
+++ b/API/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.3",
+    "pdfkit": "^0.15.0",
     "pg": "^8.12.0",
     "sequelize": "^6.37.3",
     "winston": "^3.13.0"
